--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ a {
 }
 
 @media (min-width: 1200px) {
-    .products-wrapper {
+    .products-wrapper, .wrapper {
       max-width: 100%;
     }
 }
@@ -561,6 +561,7 @@ a {
 .inf-container {
     margin-top: 50px;
 }
+
 .info-row {
     margin-left: 350px;
     margin-right: auto;
@@ -640,7 +641,7 @@ a {
 }
 
 .help-row {
-    width: 1100px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -648,6 +649,7 @@ a {
     justify-content: flex-end;
     flex-direction: row;
 }
+
 
 .help__photo {
     margin-right: auto;
@@ -834,7 +836,6 @@ input[type=text]:focus {
     line-height: 32px;
     letter-spacing: 0.325px;
     color: #F2994A;
-    
 }
 
 .f-socials {
